force-app/main/default/objects/Product2/fields/Return_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Return_Conditions__c</fullName>
    <label>Return Conditions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>