force-app/main/default/objects/Product2/fields/Return_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Return_Period_Days__c</fullName>
    <label>Return Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>