force-app/main/default/objects/Product2/fields/Returnable__c.field-meta.xml
<CustomField>
    <fullName>Returnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Returnable</label>
    <type>Checkbox</type>
</CustomField>